--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "dependencies": {
     "@discordjs/collection": "^1.3.0",
     "@discordjs/rest": "^1.5.0",
-    "@discordjs/ws": "^0.6.0",
+    "@discordjs/ws": "^0.6.1-dev.1674129868-56ef3ad.0",
     "@nezuchan/cordis-brokers": "^2.0.0",
     "@nezuchan/redis-collection": "^1.3.0",
     "@sapphire/async-queue": "^1.5.0",
