--- a/.example.env
+++ b/.example.env
@@ -51,5 +51,6 @@ PROMETHEUS_PORT = 9090
 PROMETHEUS_ENABLED = false
 
 STORE_LOGS = true
+LOKI_HOST = http://localhost:3100 # (optional)
 
 USE_PROCESS_SHARDING = false
