--- a/package.json
+++ b/package.json
@@ -2,37 +2,24 @@
   "name": "@nezuchan/nezu-gateway",
   "version": "1.12.0",
   "description": "A standalone service for connecting to the Discord gateway.",
+  "license": "GPL-3.0",
+  "author": "KagChi",
+  "type": "module",
   "main": "dist",
   "scripts": {
-    "start": "npm run build && node -r dotenv/config dist/index.js",
+    "build": "rimraf dist && swc src -d dist",
     "lint": "eslint src --ext ts",
     "lint:fix": "eslint src --fix --ext ts",
-    "build": "rimraf dist && swc src -d dist"
-  },
-  "type": "module",
-  "author": "KagChi",
-  "license": "GPL-3.0",
-  "devDependencies": {
-    "@hazmi35/eslint-config": "^9.0.0",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.42",
-    "@types/gradient-string": "^1.1.2",
-    "@types/node": "^18.15.7",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "@vladfrangu/async_event_emitter": "^2.1.4",
-    "eslint": "^8.36.0",
-    "rimraf": "^4.4.1",
-    "typescript": "^5.0.2"
+    "start": "npm run build && node -r dotenv/config dist/index.js"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint"
-    ],
     "parserOptions": {
       "project": "./tsconfig.json"
     },
+    "plugins": [
+      "@typescript-eslint"
+    ],
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
@@ -55,14 +42,28 @@
     "@sapphire/time-utilities": "^1.7.9",
     "@sapphire/utilities": "^3.11.0",
     "@skyra/start-banner": "^1.0.2",
-    "@types/amqplib": "^0.10.1",
-    "discord-api-types": "^0.37.37",
     "dotenv": "^16.0.3",
     "gradient-string": "^2.0.2",
     "ioredis": "^5.3.1",
     "pino": "^8.11.0",
+    "pino-loki": "^2.0.4",
     "pino-pretty": "^10.0.0",
     "prometheus-middleware": "^1.1.2",
     "zlib-sync": "^0.1.8"
+  },
+  "devDependencies": {
+    "@hazmi35/eslint-config": "^9.0.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.42",
+    "@types/amqplib": "^0.10.1",
+    "@types/gradient-string": "^1.1.2",
+    "@types/node": "^18.15.7",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "@vladfrangu/async_event_emitter": "^2.1.4",
+    "discord-api-types": "^0.37.37",
+    "eslint": "^8.36.0",
+    "rimraf": "^4.4.1",
+    "typescript": "^5.0.2"
   }
 }
