--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "@sapphire/result": "^2.6.1",
     "@sapphire/utilities": "^3.11.1",
     "@skyra/start-banner": "^2.0.0",
+    "bufferutil": "^4.0.7",
     "dotenv": "^16.0.3",
     "gradient-string": "^2.0.2",
     "ioredis": "^5.3.2",
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
+    "utf-8-validate": "^6.0.3",
     "zlib-sync": "^0.1.8"
   },
   "devDependencies": {
