--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
     "bufferutil": "^4.0.7",
+    "dockerode": "^3.3.5",
     "dotenv": "^16.3.1",
     "gradient-string": "^2.0.2",
     "ioredis": "^5.3.2",
@@ -53,6 +54,7 @@
     "pino-pretty": "^10.2.0",
     "prometheus-middleware": "^1.1.3",
     "utf-8-validate": "^6.0.3",
+    "yaml": "^2.3.1",
     "zlib-sync": "^0.1.8"
   },
   "devDependencies": {
@@ -60,6 +62,7 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.74",
     "@types/amqplib": "^0.10.1",
+    "@types/dockerode": "^3.3.19",
     "@types/gradient-string": "^1.1.2",
     "@types/node": "^18.17.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
