--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
     "eslint": "^8.47.0",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
+  },
+  "optionalDependencies": {
+    "pino-loki": "^2.1.3"
   }
 }
