feat: add config for REDIS_DISABLE_PIPELINING and REDIS_SCAN_COUNT

--- a/.example.env
+++ b/.example.env
@@ -26,6 +26,10 @@ REDIS_CLUSTERS = '[
     }
 ]'
 
+REDIS_SCAN_COUNT = 1000
+# Disable pipelining if you turn into issues, especially on Redis Clusters. (https://github.com/redis/ioredis/issues/1377)
+REDIS_DISABLE_PIPELINING = false
+
 DISCORD_TOKEN = 
 HTTP_PROXY = 
 
