--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "prometheus-middleware": "^1.3.2",
     "tslib": "^2.6.2",
     "utf-8-validate": "^6.0.3",
-    "yaml": "^2.3.4",
-    "zlib-sync": "^0.1.9"
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@hazmi35/eslint-config": "^11.0.0",
@@ -76,6 +75,7 @@
     "typescript": "^5.3.3"
   },
   "optionalDependencies": {
-    "pino-loki": "^2.1.3"
+    "pino-loki": "^2.1.3",
+    "zlib-sync": "^0.1.9"
   }
 }
