feat(GuildUpdateListener): Add an option to not fetch old data from guildUpdate event.

--- a/.example.env
+++ b/.example.env
@@ -48,6 +48,8 @@ STATE_USER =
 STATE_THREAD_MEMBER = 
 STATE_ROLE = 
 
+GUILD_UPDATE_DONT_FETCH_OLDS =
+
 PROMETHEUS_PORT = 9090
 PROMETHEUS_ENABLED = false
 
