--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nezuchan/nezu-gateway",
-  "version": "3.4.1",
+  "version": "4.0.0",
   "description": "A standalone service for connecting to the Discord gateway.",
   "license": "GPL-3.0",
   "author": "KagChi",
@@ -29,15 +29,18 @@
     "discord-api-types": "^0.37.69",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.2",
+    "drizzle-orm": "^0.29.3",
     "gradient-string": "^2.0.2",
     "ioredis": "^5.3.2",
     "kearsarge": "^1.0.3",
     "pino": "^8.18.0",
     "pino-pretty": "^10.3.1",
+    "postgres": "^3.4.3",
     "prometheus-middleware": "^1.3.3",
     "tslib": "^2.6.2",
     "utf-8-validate": "^6.0.3",
-    "yaml": "^2.3.4"
+    "yaml": "^2.3.4",
+    "zlib-sync": "^0.1.9"
   },
   "devDependencies": {
     "@hazmi35/eslint-config": "^13.3.1",
@@ -48,12 +51,13 @@
     "@types/gradient-string": "^1.1.5",
     "@types/node": "^20.11.17",
     "@vladfrangu/async_event_emitter": "^2.2.4",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0",
+    "pg": "^8.11.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
   "optionalDependencies": {
-    "pino-loki": "^2.2.1",
-    "zlib-sync": "^0.1.9"
+    "pino-loki": "^2.2.1"
   }
 }
