--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
         "importHelpers": true,
         "resolveJsonModule": true,
         "strictNullChecks": true,
+        "noEmit": true,
         "typeRoots": ["node_modules/@types", "src/typings"]
     },
     "exclude": ["node_modules", "node_modules/**/**.d.ts"],
-    "include": ["src/**/**.ts", "src/**/**.json", "tsup.config.ts"],
+    "include": ["src/**/**.ts", "src/**/**.json", "drizzle.config.ts"],
 }
