--- a/services/kanao-gateway/package.json
+++ b/services/kanao-gateway/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.4.4",
     "drizzle-orm": "^0.29.3",
     "gradient-string": "^2.0.2",
+    "pg": "^8.11.3",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "postgres": "^3.4.3",
@@ -48,6 +49,7 @@
     "@types/dockerode": "^3.3.23",
     "@types/gradient-string": "^1.1.5",
     "@types/node": "^20.11.19",
+    "@types/pg": "^8.11.0",
     "@vladfrangu/async_event_emitter": "^2.2.4",
     "drizzle-kit": "^0.20.14",
     "rimraf": "^5.0.5",
