feat(GuildCreateListener): add GUILD_CREATE_GC_EVERY option

--- a/services/kanao-gateway/.example.env
+++ b/services/kanao-gateway/.example.env
@@ -41,3 +41,7 @@ LOKI_HOST=http://localhost:3100 # (optional)
 
 REPLICA_ID=0
 REPLICA_COUNT=1
+
+# Do a garbage collection on guildCreate after x times
+# Useful on startups
+GUILD_CREATE_GC_EVERY=
