--- a/.github/workflows/services-release.yml
+++ b/.github/workflows/services-release.yml
@@ -11,8 +11,8 @@ jobs:
       service: ${{ steps.scope.outputs.service }}
       version: ${{ steps.scope.outputs.version }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Check Out Repo
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       - name: Get tag name
         id: tag
         run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
@@ -20,7 +20,7 @@ jobs:
         id: scope
         run: |
           TAG=${{ steps.tag.outputs.tag }}
-          SERVICE_NAME=$(echo $TAG | cut -d'@' -f2 | cut -d'-' -f2)
+          SERVICE_NAME=$(echo $TAG | cut -d'@' -f2)
           VERSION=$(echo $TAG | cut -d'@' -f3)
           echo "service=${SERVICE_NAME}" >> $GITHUB_OUTPUT
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
@@ -28,6 +28,6 @@ jobs:
     uses: ./.github/workflows/docker.yml
     needs: scope
     with:
-      scope: ${{ needs.scope.outputs.service }}
+      scope: '["${{ needs.scope.outputs.service }}"]'
       version: ${{ needs.scope.outputs.version }}
     secrets: inherit
