--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,8 +30,7 @@
   "author": "KagChi",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@types/amqplib": "^0.10.5",
-    "@types/pg": "^8.11.5"
+    "@types/amqplib": "^0.10.5"
   },
   "dependencies": {
     "@cordis/bitfield": "^1.2.0",
@@ -47,8 +46,6 @@
     "amqp-connection-manager": "^4.1.14",
     "discord-api-types": "^0.37.81",
     "drizzle-orm": "^0.30.9",
-    "pg": "^8.11.5",
-    "postgres": "^3.4.4",
     "tslib": "^2.6.2"
   }
 }
