chore: update package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanao",
+  "name": "@nezuchan/kanao",
   "version": "1.0.0",
   "description": "A standalone service for connecting to the Discord gateway",
   "type": "module",
