--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -7,7 +7,7 @@ on:
       - main
     paths:
       - "Dockerfile"
-      - "*/**"
+      - "services/**"
   pull_request:
     branches:
       - main
