--- a/turbo.json
+++ b/turbo.json
@@ -1,16 +1,22 @@
 {
-	"$schema": "https://turborepo.org/schema.json",
-	"pipeline": {
-		"build": {
-			"dependsOn": ["^build"],
-			"outputs": ["dist/**"]
-		},
-		"lint": {
-			"dependsOn": ["^build"],
-			"outputs": []
-		},
-		"lint:fix": {
-			"outputs": []
-		}
-	}
+  "$schema": "https://turborepo.org/schema.json",
+  "tasks": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**"
+      ]
+    },
+    "lint": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": []
+    },
+    "lint:fix": {
+      "outputs": []
+    }
+  }
 }
